--- a/src/components/master-detail-crud/master-detail-crud.component.html
+++ b/src/components/master-detail-crud/master-detail-crud.component.html
@@ -21,8 +21,8 @@
         <th>Employee CNIC</th>
         <th>Employee Job</th>
         <th>Gender</th>
-        <th>DOB</th>
-        <th>Salary</th>
+        <th>Age(Y)</th>
+        <th>Salary($)</th>
         <th>Actions</th>
       </tr>
     </ng-template>
@@ -32,11 +32,11 @@
           <div class=>
             <span >{{ dept.departmentName }}</span>
         
-            <div class="flex gap-2 mt-2">
+            <!-- <div class="flex gap-2 mt-2">
               <p-button icon="pi pi-pencil" [rounded]="true" severity="warn" (click)="editDepartment(rowIndex)"></p-button>
               <p-button icon="pi pi-trash" [rounded]="true" severity="danger" (click)="confirmDeleteDepartment($event, rowIndex)"></p-button>
               
-            </div>
+            </div> -->
           </div>
         </td>
        
@@ -45,7 +45,7 @@
         <td>{{ emp.employeeCNIC }}</td>
         <td>{{ emp.employeeJob }}</td>
         <td>{{ emp.employeeGender}}</td>
-        <td>{{ emp.employeeDOB}}</td>
+        <td>{{ calculateAge(emp.employeeDOB)}}</td>
         <td>{{ emp.employeeSalary}}</td>
         <td>
           <div class="flex gap-2 mt-2">
@@ -63,15 +63,18 @@
 <!-- Department Dialog for form -->
 
 
-<div class="card flex justify-center">
-  <p-dialog header="Employee Detail Form" [modal]="true" [(visible)]="visible"  (onHide)="closeDialog()" [style]="{ width: '65rem' }">
-      <span class="p-text-secondary block mb-4">Add employee details...</span>
+<div class="card flex justify-center ">
+  <p-dialog  [modal]="true" [(visible)]="visible"  (onHide)="closeDialog()" [style]="{ width: '75rem'} " >
+    <ng-template pTemplate="header">
+      <div class="w-full text-center font-bold text-lg">Employee Form </div>
+    </ng-template>
       <form [formGroup]="departmentForm" (ngSubmit)="onFormSubmit()">
 
-  
-        <div class="card border border-gray-300 p-4 grid grid-cols-1 md:grid-cols-2 gap-4">
           
-              <div>
+        <div class="card border border-gray-300 bg-gray-200 p-4 ">
+          
+              <!--Department Name-->
+              <div class=" ml-2 w-18rem">
               <p-inputgroup>
                 <p-inputgroup-addon>
                     <i class="pi pi-building"></i>
@@ -94,14 +97,33 @@
                 Department name cannot exceed 20 characters.
               </small>
              
+            
             </div>
               
               
-              <div formArrayName="employees" class="mt-4">
+              <div formArrayName="employees" class="mt-4" >
                 <div *ngFor="let emp of Employees().controls; let empIndex=index;" [formGroupName]="empIndex" class="p-3 border border-gray-200 rounded-lg mb-3 bg-gray-50">
-                  
-                  <div class="flex flex-wrap md:flex-nowrap gap-4 items-center">
-                    <div class="flex-1">
+                  <div class="flex flex-wrap column-gap-4 row-gap-6">
+                  <div class="flex-auto">
+                    <p-inputgroup>
+                      <p-inputgroup-addon>
+                        <i class="pi pi-database"></i>
+                      </p-inputgroup-addon>
+                      <input pInputText  placeholder="Employee Record: {{empIndex+ 1}}"  class="w-full" [disabled]="true"/>
+                    </p-inputgroup>
+                  </div> 
+
+                   <!--Remove Employee Button-->
+                   <div class="flex-auto  ml-90" *ngIf="!isEditingEmployee">
+                    <p-button icon="pi pi-minus" [rounded]="true" severity="danger" (click)="removeEmployee(empIndex)" [raised]="true"  ></p-button>
+                  </div>
+                  </div> 
+                  <div class="flex flex-wrap column-gap-4 row-gap-6 mt-4">
+
+                    
+
+                     <!--Employee Name-->
+                    <div class="flex-auto">
                       <p-inputgroup>
                         <p-inputgroup-addon>
                           <i class="pi pi-user"></i>
@@ -125,12 +147,14 @@
                 Employee name cannot exceed 20 characters.
               </small>
                     </div>    
-                    <div class="flex-1">
+
+                     <!--Employee CNIC-->
+                    <div class="flex-auto">
                       <p-inputgroup>
                         <p-inputgroup-addon>
                           <i class="pi pi-id-card"></i>
                         </p-inputgroup-addon>
-                        <input pInputText placeholder="Employee CNIC"  formControlName="employeeCNIC" class="w-full" />
+                        <input pInputText  placeholder="Employee CNIC" [maxlength]="13"  [ngClass]="{'ng-invalid-cnic': emp.get('employeeCNIC')?.errors?.['uniqueError']}"  formControlName="employeeCNIC" class="w-full" />
                       </p-inputgroup>
                       <small *ngIf="emp.get('employeeCNIC')?.errors?.['required'] && emp.get('employeeCNIC')?.touched" class="p-error mt-1">
                         Employee CNIC is required.
@@ -138,9 +162,13 @@
                       <small *ngIf="emp.get('employeeCNIC')?.errors?.['pattern']" class="p-error mt-1">
                         CNIC can contain only 13 digits(0-9).
                       </small>
+                      <small *ngIf="emp.get('employeeCNIC')?.errors?.['uniqueError']" class="p-error mt-1">
+                        {{emp.get('employeeCNIC')?.errors?.['uniqueError']}}
+                      </small>
                     </div>
                   
-                    <div class="flex-1">
+                     <!--Employee JOB-->
+                    <div class="flex-auto">
                       <p-inputgroup>
                         <p-inputgroup-addon>
                           <i class="pi pi-briefcase"></i>
@@ -157,57 +185,92 @@
                     </div>
 
                    
-
-                    <div class="flex-1" *ngIf="!isEditingEmployee">
-                      <p-button icon="pi pi-minus" [rounded]="true" severity="danger" (click)="removeEmployee(empIndex)"></p-button>
-                    </div>
-                  </div>
-                  <div class="flex flex-wrap md:flex-nowrap gap-4 items-center mt-6"> &nbsp; &nbsp;
+                    
+                  
+                  &nbsp; &nbsp;
 
                    
-                      <label>Select Gender:</label>
-                      <p-radiobutton    value="Male" formControlName="employeeGender" />
-                      <label for="employeeGender{{empIndex}}" class="ml-2">Male</label>
-
-                      <p-radiobutton   value="Female" formControlName="employeeGender" />
-                      <label for="employeeGender{{empIndex}}" class="ml-2">Female</label>
-
-                      <p-radiobutton  value="Other" formControlName="employeeGender" />
-                      <label for="employeeGender{{empIndex}}" class="ml-2">Other</label>
-
-
-                      <small *ngIf="emp.get('employeeGender')?.errors?.['required'] && emp.get('employeeGender')?.touched" class="p-error mt-1">
-                        Gender is required.
-                      </small>
-                    
-                 
-                </div>
-                <div class="flex-wrap md:flex-nowrap gap-4 items-center mt-8" >
+                     <!--Employee Salary-->
+                      <div class="flex-auto" >
+                        <p-inputgroup>
+                          <p-inputgroup-addon>
+                            <i class="pi pi-wallet"></i>
+                          </p-inputgroup-addon>
+                          <input pInputText  placeholder="Employee Salary"   formControlName="employeeSalary" class="w-full"  />
+                        </p-inputgroup>
+                        <small *ngIf="emp.get('employeeSalary')?.errors?.['required'] && emp.get('employeeSalary')?.touched" class="p-error mt-1">
+                          Employee Salary is required.
+                        </small>
+                        <small *ngIf="emp.get('employeeSalary')?.errors?.['min']" class="p-error mt-1">
+                          Salary must be atleast 1000.
+                        </small>
+                        <small *ngIf="emp.get('employeeSalary')?.errors?.['max']" class="p-error mt-1">
+                          Salary cannot be more than 10,000.
+                        </small>
+                        <small *ngIf="emp.get('employeeSalary')?.errors?.['pattern']" class="p-error mt-1">
+                          Salary can contain only digits(0-9).
+                        </small>
+                      </div>
+                <!--Employee DOB-->
+                <div class="flex-auto"  >
                   
-                  <p-datepicker formControlName="employeeDOB" placeholder="Date of Birth"  showIcon iconDisplay="input" />
+                  <p-datepicker [maxDate]="todayDate" formControlName="employeeDOB" appendTo="body" dateFormat="dd/mm/yy" placeholder="Date of Birth"  showIcon iconDisplay="input" />
                   
-                  </div>
-
                   <small *ngIf="emp.get('employeeDOB')?.errors?.['required'] && emp.get('employeeDOB')?.touched" class="p-error mt-1">
-                    DOB is required.
+                    DOB is required. Must follow format dd/mm/yy.
                   </small>
 
-                  <small *ngIf="emp.get('employeeDOB')?.errors?.['minError']">
+                  <small *ngIf="emp.get('employeeDOB')?.errors?.['minError']" class="p-error mt-1">
                     {{ emp.get('employeeDOB')?.errors?.['minError']}}
                   </small>
+
+                  <small *ngIf="emp.get('employeeDOB')?.errors?.['maxError']" class="p-error mt-1">
+                    {{ emp.get('employeeDOB')?.errors?.['maxError']}}
+                  </small>  
+                </div>
+
+                <!--Employee Gender-->
+                <div class="flex-auto" >
+                 
+                
+                <input type="radio"  value="Male" [attr.name]="'employeeGender' + empIndex" formControlName="employeeGender" />
+                <label class="ml-1 mr-5">Male</label>
+                
+                <input type="radio"  value="Female" [attr.name]="'employeeGender' + empIndex" formControlName="employeeGender" />
+                <label  class="ml-1 mr-5">Female</label>
+                
+                <input type="radio"  value="Other" [attr.name]="'employeeGender' + empIndex" formControlName="employeeGender" />
+                <label class="ml-1 mr-5">Other</label>
                   
+                <small *ngIf="emp.get('employeeGender')?.errors?.['required'] && emp.get('employeeGender')?.touched" class="p-error mt-1">
+                  Gender is required.
+                </small>
+              </div>
+
+              </div>
+
+                 
+
+                 
+                  
+
                 </div>
-                <div class="flex justify-end mt-4" *ngIf="!isEditingEmployee ">
-                  <p-button icon="pi pi-plus-circle" (click)="addNewEmployee()" [disabled]="!isEmployeeRecordAdded()"  severity="primary"  [raised]="true" label="Add Employee" />
-                </div>
+                    <!--Add Employee Button-->
+               <div class="flex-auto" *ngIf="!isEditingEmployee ">
+                <p-button icon="pi pi-plus-circle"  (click)="addNewEmployee()" [disabled]="!isEmployeeRecordAdded()"  severity="primary"  [raised]="true" label="Add Employee" />
+              </div>
+             
+                
               </div> 
         </div>
         
       </form>
-      <div class="flex justify-right gap-2">
-          <p-button label="Cancel" severity="danger" (click)="closeDialog()" />
-          <p-button [label]="empEditIndex !==null || deptEditIndex !==null ? 'Update' : 'Save'" (click)="saveDepartment()" />
+      <ng-template pTemplate="footer">
+      <div class="flex justify-end items-center gap-2 mt-4 mr-2 ">
+        <p-button [label]="empEditIndex !==null || deptEditIndex !==null ? 'Update' : 'Save'"   (click)="saveDepartment()" />
+        <p-button label="Cancel"   severity="danger" (click)="closeDialog()" />
       </div>
+    </ng-template>
   </p-dialog>
 </div>
 
